--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native/new-app-screen": "0.80.2",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "react": "19.1.0",
     "react-native": "0.80.2",
-    "@react-native/new-app-screen": "0.80.2"
+    "react-native-gesture-handler": "^2.13.4",
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "^3.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
