--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native/new-app-screen": "0.80.2",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@tanstack/react-query": "^5.84.0",
+    "axios": "^1.1.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-gesture-handler": "^2.13.4",
