--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "axios": "^1.1.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-nfc-manager": "^3.16.0",
+    "react-native-permissions": "^3.10.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0"
   },
