--- a/package.json
+++ b/package.json
@@ -2,49 +2,171 @@
   "name": "sodam_FE",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
+    "start": "react-native start",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
-    "test": "jest"
+    "lint:fix": "eslint . --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:ci": "jest --coverage --watchAll=false",
+    "test:update": "jest --updateSnapshot",
+    "gradle-clean": "cd android && ./gradlew clean && cd ..",
+    "metro-reset": "npx react-native start --reset-cache",
+    "pre-android": "npm run gradle-clean && npm run metro-reset",
+    "android:clean": "npm run gradle-clean && npm run metro-reset && npm run android",
+    "clean:all": "npm run gradle-clean && rimraf node_modules && npm install",
+    "postinstall": "cd ios && pod install && cd ..",
+    "prepare": "husky install",
+    "build:android": "cd android && ./gradlew assembleRelease",
+    "build:ios": "cd ios && xcodebuild -workspace SodamFrontEnd.xcworkspace -scheme SodamFrontEnd -configuration Release archive"
   },
   "dependencies": {
-    "@react-native/new-app-screen": "0.80.2",
+    "react": "18.2.0",
+    "react-native": "0.75.4",
+
     "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.20",
-    "@tanstack/react-query": "^5.84.0",
-    "axios": "^1.1.0",
-    "react": "19.1.0",
-    "react-native": "0.80.2",
+    "react-native-gesture-handler": "^2.16.2",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "^4.9.0",
+
+    "react-native-mmkv": "^2.11.0",
+    "react-native-keychain": "^8.2.0",
+
     "react-native-geolocation-service": "^5.3.1",
-    "react-native-gesture-handler": "^2.13.4",
     "react-native-nfc-manager": "^3.16.0",
     "react-native-permissions": "^3.10.1",
-    "react-native-safe-area-context": "^4.7.4",
-    "react-native-screens": "^3.27.0"
+
+    "@tanstack/react-query": "^5.84.0",
+    "@tanstack/react-query-devtools": "^5.84.0",
+    "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
+    "react-native-chart-kit": "^6.12.0",
+
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-hook-form": "^7.48.2",
+    "react-native-image-picker": "^7.1.0",
+
+    "@react-native-community/datetimepicker": "^7.6.2",
+    "react-native-modal": "^13.0.1",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-svg": "^14.1.0",
+    "react-native-svg-charts": "^5.4.0",
+
+    "react-native-device-info": "^10.13.0",
+    "react-native-orientation-locker": "^1.7.0",
+    "react-native-splash-screen": "^3.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
-    "@react-native-community/cli": "19.1.1",
-    "@react-native-community/cli-platform-android": "19.1.1",
-    "@react-native-community/cli-platform-ios": "19.1.1",
-    "@react-native/babel-preset": "0.80.2",
-    "@react-native/eslint-config": "0.80.2",
-    "@react-native/metro-config": "0.80.2",
-    "@react-native/typescript-config": "0.80.2",
-    "@types/jest": "^29.5.13",
-    "@types/react": "^19.1.0",
-    "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^8.19.0",
-    "jest": "^29.6.3",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.1.0",
-    "typescript": "5.0.4"
+    "@babel/core": "^7.24.0",
+    "@babel/runtime": "^7.24.0",
+    "@react-native/babel-preset": "0.75.4",
+    "@react-native/eslint-config": "0.75.4",
+    "@react-native/metro-config": "0.75.4",
+    "@react-native/typescript-config": "0.75.4",
+
+    "@testing-library/react-native": "^13.2.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^18.19.120",
+    "@types/react": "^18.2.79",
+    "@types/react-test-renderer": "^18.0.7",
+    "@types/react-native-vector-icons": "^6.4.18",
+
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.1.0",
+
+    "jest": "^29.7.0",
+    "prettier": "^3.3.3",
+    "react-test-renderer": "18.2.0",
+    "rimraf": "^6.0.1",
+    "typescript": "^5.3.3",
+
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
+    "@react-native-community/cli-doctor": "^12.3.0",
+
+    "babel-jest": "^29.7.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-flipper": "^0.212.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18.19.0",
+    "npm": ">=8.0.0"
+  },
+  "resolutions": {
+    "@react-native-community/cli": "12.3.6",
+    "@react-native-community/cli-platform-android": "12.3.6",
+    "@react-native-community/cli-platform-ios": "12.3.6",
+    "react-native-reanimated": "3.10.1"
+  },
+  "overrides": {
+    "react-native-reanimated": "3.10.1",
+    "@react-native-community/cli": "12.3.6"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md}": [
+      "prettier --write"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run test:ci"
+    }
+  },
+  "jest": {
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.js"
+    ],
+    "testMatch": [
+      "**/__tests__/**/*.(ts|tsx|js)",
+      "**/*.(test|spec).(ts|tsx|js)"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{ts,tsx}",
+      "!src/**/*.d.ts",
+      "!src/**/*.stories.{ts,tsx}",
+      "!src/assets/**",
+      "!src/**/__tests__/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 70,
+        "lines": 70,
+        "statements": 70
+      }
+    },
+    "moduleNameMapping": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|@react-native|react-native-vector-icons|react-native-reanimated|react-native-gesture-handler|react-native-screens|react-native-safe-area-context|@react-navigation|react-native-mmkv|react-native-keychain|react-native-nfc-manager|react-native-geolocation-service|react-native-permissions|react-native-chart-kit|react-native-svg|react-native-linear-gradient|react-native-image-picker|react-native-modal|react-native-toast-message|react-native-device-info|react-native-orientation-locker|react-native-splash-screen)/)"
+    ]
+  },
+  "metro": {
+    "resolver": {
+      "alias": {
+        "@": "./src"
+      }
+    }
   }
 }
